metronews.ca (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;newsandmedia",
  "char_count": 10748,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.92,
  "homepage_snapshot_redirected_domain": "metronews.ca",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060404232429id_/http://www.metronews.ca/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060404232429id_/http%3A//metronews.ca",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "metronews.ca",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615013733id_/http%3A//www.metronews.ca/privacy.asp",
  "policy_title": null,
  "policy_url": "metronews.ca/privacy.asp",
  "sha1": "6f13825af2ab02817f04fa866f24d218fdf2d0f6",
  "simhash": 14904332012424968345,
  "simhash_updated": false,
  "site_hostname": "metronews.ca",
  "site_url": "http://metronews.ca",
  "smog": 14.6,
  "strict_updated": false,
  "timestamp": "20060615013733",
  "word_count": 1693,
  "year": 2006
}

--- a/m/me/met/metronews.ca.html
+++ b/m/me/met/metronews.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the metronews.ca privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219030934id_/http%3A//www.metronews.ca/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the metronews.ca privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615013733id_/http%3A//www.metronews.ca/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -11,49 +11,40 @@
 <div class="body"> 
   <table width="100%" border="0" cellspacing="0" cellpadding="0">
     <tbody><tr> 
-      <td class="topbar"><!--- Global Top Banner --->
-
-<table border="0" cellpadding="0" cellspacing="0">
-  <tbody><tr> 
-    <td width="150"><a href="/index.asp"><img src="/images/top_bar/logo.gif" width="150" height="91" border="0"></a></td>
-    <td width="1" valign="top" bgcolor="#FFFFFF"><img src="images/spacer.gif" width="1" height="91"></td>
-    <td width="497" align="center" valign="bottom"> 
-      <table border="0" cellspacing="0" cellpadding="0" height="100%">
-        <tbody><tr> 
-          <td rowspan="3" valign="top"><img src="images/spacer.gif" width="1" height="91"></td>
-          <td valign="top"><script language="JavaScript" type="text/javascript">
+      <td class="topbar"><table width="1100px" height="110" border="0" cellpadding="0" cellspacing="0">
+  <tbody><tr>
+    <td bgcolor="#006633"><div id="logo"><a href="/index.asp"><img src="/images/top_bar/logo.gif" width="150" height="91" border="0"></a></div>
+      <div id="mastHeadMiddle">
+        <div id="leaderBoard">
+          <script language="JavaScript" type="text/javascript">
 <!--
    if (!document.phpAds_used) document.phpAds_used = ',';
    phpAds_random = new String (Math.random()); phpAds_random = phpAds_random.substring(2,11);
    
    document.write ("<" + "script language='JavaScript' type='text/javascript' src='");
    document.write ("http://ads.webfeat.com/adjs.php?n=" + phpAds_random);
-   document.write ("&amp;what=zone:24");
+   document.write ("&amp;what=zone:152");
    document.write ("&amp;exclude=" + document.phpAds_used);
    if (document.referer)
       document.write ("&amp;referer=" + escape(document.referer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://ads.webfeat.com/adjs.php?n=037990386&amp;what=zone:24&amp;exclude=,"></script><noscript><a href='http://ads.webfeat.com/adclick.php?n=a297ffc3' target='_blank'><img src='http://ads.webfeat.com/adview.php?what=zone:24&amp;n=a297ffc3' border='0' alt=''></a></noscript>
-
-          </td>
-        </tr>
-        <tr> 
-          <td><img src="images/spacer.gif" width="469" height="5"></td>
-        </tr>
-        <tr> 
-          <td valign="bottom"><p class="date">Sunday, December 18, 2005</p></td>
-        </tr>
-      </tbody></table>
-    </td>
-    <td valign="top">
-<!-- Begin WeatherLink Flash Fragment -->
-<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=4,0,2,0" width="180" height="110">
-    <param name="movie" value="http://www.weatheroffice.com/FlashFeed/WxLinks/CYYZ.swf">
-    <param name="quality" value="high">    <embed src="http://www.weatheroffice.com/FlashFeed/WxLinks/CYYZ.swf" quality="high" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="150" height="90">
-      	</object>
-<!-- End WeatherLink Flash Fragment -->
-	  </td>
+</script><script language="JavaScript" type="text/javascript" src="http://ads.webfeat.com/adjs.php?n=891045168&amp;what=zone:152&amp;exclude=,"></script>
+          <noscript>
+          <a href='http://ads.webfeat.com/adclick.php?n=a6aeead2' target='_blank'><img src='http://ads.webfeat.com/adview.php?what=zone:152&amp;n=a6aeead2' border='0' alt=''></a>
+          </noscript>
+        </div>
+        <div id="currentDate"> Wednesday, June 14, 2006 </div>
+      </div>
+      <div id="weatherFlash">
+        <!-- Begin WeatherLink Flash Fragment -->
+        <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=4,0,2,0" width="180" height="110">
+          <param name="movie" value="http://www.weatheroffice.com/FlashFeed/WxLinks/CYYZ.swf">
+          <param name="quality" value="high">
+          <embed src="http://www.weatheroffice.com/FlashFeed/WxLinks/CYYZ.swf" quality="high" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="180" height="110">
+        </object>
+        <!-- End WeatherLink Flash Fragment -->
+      </div></td>
   </tr>
 </tbody></table>
 </td>
@@ -74,7 +65,7 @@ function highlightRow(rwElem, turn_on)
   <tbody><tr> 
      <td height="33"><img src="/images/side_nav/colour_home.gif" width="150" height="33"></td> 
   </tr>
-  <tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/index.htm" target="">&nbsp;: : Home</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/news.htm" target="">&nbsp;: : News</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/entertainment.htm" target="">&nbsp;: : Entertainment</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/movies/" target="">&nbsp;: : Movies</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/lifestyle/" target="">&nbsp;: : Lifestyle</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/personal_finance/index.asp" target="">&nbsp;: : Your Money</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/books.htm" target="">&nbsp;: : Books</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/worksmart.htm" target="">&nbsp;: : Workology</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/travel/" target="">&nbsp;: : Travel</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/moving_up/" target="">&nbsp;: : Moving Up</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/sports.htm" target="">&nbsp;: : Sports</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/columnists.htm" target="">&nbsp;: : Columnists</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/tech.htm" target="">&nbsp;: : Tech</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/special_section/index.asp" target="">&nbsp;: : Special Section</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/contests.htm" target="">&nbsp;: : Toronto Contests</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/contests_vancouver.htm" target="">&nbsp;: : Vancouver Contests</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/contests_ottawa.htm" target="">&nbsp;: : Ottawa Contests</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/letters.htm" target="">&nbsp;: : Letters to the Editor</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/contact_us.asp" target="">&nbsp;: : Contact Us</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/advertise.asp" target="">&nbsp;: : Advertise with Us</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/about.asp" target="">&nbsp;: : About Metro</a></div></td></tr>
+  <tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/index.asp" target="">&nbsp;: : Home</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/news.asp" target="">&nbsp;: : News</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/entertainment.asp" target="">&nbsp;: : Entertainment</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/movies/" target="">&nbsp;: : Movies</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/lifestyle/" target="">&nbsp;: : Lifestyle</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="automotive.asp?id=11779" target="">&nbsp;: : Driver's Side</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/personal_finance/index.asp" target="">&nbsp;: : Your Money</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/books.asp" target="">&nbsp;: : Books</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/worksmart.asp" target="">&nbsp;: : Workology</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/travel/" target="">&nbsp;: : Travel</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/moving_up/" target="">&nbsp;: : Moving Up</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/sports.asp" target="">&nbsp;: : Sports</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/columnists.asp" target="">&nbsp;: : Columnists</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/tech.asp" target="">&nbsp;: : Tech</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/special_section/index.asp" target="">&nbsp;: : Special Section</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/letters.asp" target="">&nbsp;: : Letters to the Editor</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/contact_us.asp" target="">&nbsp;: : Contact Us</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/advertise.asp" target="">&nbsp;: : Advertise with Us</a></div></td></tr><tr onmouseover="highlightRow(this, 1)" onmouseout="highlightRow(this, 0)" class="navOff"><td><div class="section"><a href="/about.asp" target="">&nbsp;: : About Metro</a></div></td></tr>
 </tbody></table> 
 </div> <br> <link rel="stylesheet" href="/default.css" type="text/css">
 
@@ -83,13 +74,13 @@ function highlightRow(rwElem, turn_on)
     <td><p><strong>Read today's Metro...</strong></p>
 
 <ul>
-<li><a href="/uploadedFiles/Metro_Toronto_1216_2005.pdf" target="_blank">Toronto</a></li>
+<li><a href="/uploadedFiles/Metro_Toronto_0614_2006.pdf" target="_blank">Toronto</a></li>
 
-<li><a href="/uploadedFiles/Metro_Vancouver_1216_2005.pdf" target="_blank">Vancouver</a></li>
+<li><a href="/uploadedFiles/Metro_Vancouver_0614_2006.pdf" target="_blank">Vancouver</a></li>
 
-<li><a href="/uploadedFiles/Metro_Ottawa_1216_2005.pdf" target="_blank">Ottawa</a></li>
+<li><a href="/uploadedFiles/Metro_Ottawa_0614_2006.pdf" target="_blank">Ottawa</a></li>
 
-<li><a href="/uploadedFiles/Metro_Montreal_1216_2005.pdf" target="_blank">Montreal</a></li>
+<li><a href="/uploadedFiles/Metro_Montreal_0614_2006.pdf" target="_blank">Montreal</a></li>
 </ul>
 </td>
   </tr>
@@ -111,24 +102,23 @@ function highlightRow(rwElem, turn_on)
     <td bgcolor="#FFFFFF"><img src="/images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td align="center"> <table width="90%" border="0" cellspacing="0" cellpadding="0">
-        <tbody><tr> 
+    <!--<td align="center"> <table width="90%" border="0" cellspacing="0" cellpadding="0">
+        <tr> 
           <td height="25" class="bigheader">DON'T MISS OUT</td>
         </tr>
         <tr> 
           <td><img src="/images/metro_newspaper.gif" width="127" height="16"></td>
         </tr>
         <tr> 
-          <td><p><font size="2">Look for our Holiday Gift Guide on December 21.</font></p>
-</td>
+          <td></td>
         </tr>
-      </tbody></table></td>
+      </table></td>
   </tr>
   <tr> 
     <td>&nbsp;</td>
   </tr>
   <tr> 
-    <td bgcolor="#FFFFFF"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td bgcolor="#FFFFFF"><img src="/images/spacer.gif" width="1" height="1"></td>-->
   </tr>
   <tr>
     <td align="center">&nbsp;</td>
@@ -147,7 +137,7 @@ function highlightRow(rwElem, turn_on)
       document.write ("&amp;referer=" + escape(document.referer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://ads.webfeat.com/adjs.php?n=469632541&amp;what=zone:131&amp;exclude=,"></script><noscript><a href='http://ads.webfeat.com/adclick.php?n=a65283de' target='_blank'><img src='http://ads.webfeat.com/adview.php?what=zone:131&amp;n=a65283de' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://ads.webfeat.com/adjs.php?n=283483560&amp;what=zone:131&amp;exclude=,"></script><noscript><a href='http://ads.webfeat.com/adclick.php?n=a65283de' target='_blank'><img src='http://ads.webfeat.com/adview.php?what=zone:131&amp;n=a65283de' border='0' alt=''></a></noscript>
 </td>
   </tr>
 </tbody></table>
@@ -297,7 +287,7 @@ function highlightRow(rwElem, turn_on)
 <table cellspacing="0" cellpadding="3" align="center" border="0"> 
   <tbody> 
     <tr> 
-      <td>(C) 2005 Metro | <a href="/privacy.asp">Privacy</a></td> 
+      <td>(C) 2006 Metro | <a href="/privacy.asp">Privacy</a></td> 
       <td>|&nbsp;<a href="mailto:webmaster@metronews.ca">Website Feedback</a></td> 
       <td>|&nbsp;<a href="/site_map.asp">Site Map</a></td> 
       <td>| <a href="http://www.metronews.ca/clickaway/track.asp?url=http://www.itearsheets.com" target="_blank">Advertisers click here for&nbsp;itear
