--- a/u/ul/ult/ultimate-guitar.com.html
+++ b/u/ul/ult/ultimate-guitar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ultimate-guitar.com privacy policy that was archived on 2005-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051226031008id_/http%3A//ultimate-guitar.com/about/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ultimate-guitar.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615013806id_/http%3A//www.ultimate-guitar.com/about/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy @ Ultimate-Guitar.Com</title>
