--- a/n/ny/nyp/nyp.org.html
+++ b/n/ny/nyp/nyp.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nyp.org privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218125132id_/http%3A//www.nyp.org/privacy/index.html%3Fname1%3DNotice%2Bof%2BPrivacy%2BPractices%26type1%3D2Active) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nyp.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615013904id_/http%3A//www.nyp.org/privacy/index.html%3Fname1%3DNotice%2Bof%2BPrivacy%2BPractices%26type1%3D2Active) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd"><html><head>
 	<title>NewYork-Presbyterian Hospital: Notice of Privacy Practices</title>
@@ -295,9 +295,9 @@
 						<table>
 							<tbody><tr class="footer-text">
 								<td valign="top">
-									© NewYork-Presbyterian Hospital <a href="http://www.nyp.org/rss.html" class="g-link"><img src="http://images.med.cornell.edu/body/common/xml.gif" width="36" height="14" border="0" alt="XML NYP Newsfeed"></a></td>
+									© NewYork-Presbyterian Hospital <a href="http://www.nyp.org/rss.html" class="g-link"><img src="http://images.med.cornell.edu/body/common/rss.gif" width="36" height="14" border="0" alt="RSS NYP Newsfeed"></a></td>
 </tr><tr class="footer-text">
-<td><a href="http://www.nyp.org" class="g-link">Home</a> | <a href="http://www.nyp.org/disclaim.html" class="g-link">Disclaimer</a> | <a href="http://www.nyp.org/sitemap.html" class="g-link">Sitemap</a> | <a href="http://www.nyp.org/privacy/index.html?name1=Notice+of+Privacy+Practices&amp;type1=2Active" class="g-link">Privacy Notice</a> | <a href="http://www.nyp.org/give/" class="g-link">Ways to Give</a></td>
+<td><a href="http://www.nyp.org" class="g-link">Home</a> | <a href="http://www.nyp.org/disclaim.html" class="g-link">Disclaimer</a> | <a href="http://www.nyp.org/sitemap.html" class="g-link">Sitemap</a> | <a href="http://www.nyp.org/privacy/index.html?name1=Notice+of+Privacy+Practices&amp;type1=2Active" class="g-link">Privacy Notice</a> | <a href="http://www.nyp.org/contactus/feedback.html?name1=Feedback&amp;type1=2Active" class="g-link">Feedback</a></td>
 							</tr>
 						</tbody></table>
 					</td>
@@ -315,6 +315,78 @@
 	<!-- end footer table..................................................................................................................... -->
 	</tr>
 </tbody></table>	
+
+<!-- START OF SmartSource Data Collector  TAG -->	
+<script language="Javascript" src="http://global.med.cornell.edu/js/stats.js">
+</script>
+
+<script language="Javascript"><!--
+gVersion="1.0";
+//-->
+</script>
+<script language="Javascript1.1"><!--
+gVersion="1.1";
+//-->
+</script>
+<script language="Javascript1.2"><!--
+gVersion="1.2";
+var RE={"%09":/\t/g,"%20":/ /g,"%23":/\#/g,"%26":/\&/g,"%2B":/\+/g,"%3F":/\?/g,"%5C":/\\/g};
+//-->
+</script>
+<script language="Javascript1.3"><!--
+gVersion="1.3";
+if (window.ActiveXObject){
+	var gFV="";
+	for (var gVer=2;gVer<=10;gVer++){
+		try{
+			var gFlash = eval("new ActiveXObject('ShockwaveFlash.ShockwaveFlash."+gVer+"');");
+			if (gFlash){
+				gFV=gVer+".0";
+				break;
+			}
+		}
+		catch(e){
+		}
+	}
+}
+//-->
+</script>
+<script language="Javascript1.4"><!--
+gVersion="1.4";
+//-->
+</script>
+<script language="Javascript1.5"><!--
+gVersion="1.5";
+//-->
+</script>
+
+<script language="Javascript"><!--
+
+if (typeof(sectionName)=="function") {
+    WT.cg_n = sectionName();
+}
+
+if (window.location.search.indexOf("qStr")!=-1) {
+	WT.oss=qStr;
+    if ((typeof(num_results)!= "undefined") && (num_results > 0)) {  // NOTE:num_results must be set
+        WT.oss_r = 1;
+    } else {
+        WT.oss_r = 0;
+   }
+}
+
+dcsVar();
+dcsMeta();
+dcsFunc("dcsAdv");
+dcsFunc("bindEvents");
+dcsTag();
+//-->
+</script>
+
+<noscript>
+<IMG ALT="" BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="http://cds.nyp.org/dcs9e0rmek711roghvzx6gsg8_9s4x/njs.gif?dcsuri=/nojavascript&amp;WT.js=No">
+</noscript>
+<!-- END OF SmartSource Data Collector  TAG -->	
 
 <!--//////////////////////////////////////////////////////////////////
 //																	//
