sync.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech;mediasharing",
  "char_count": 10431,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.79,
  "homepage_snapshot_redirected_domain": "sync.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060407042712id_/http://www.sync.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060407042712id_/http%3A//sync.com",
  "interval": "2006_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "sync.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615014017id_/http%3A//www.sync.com/privacy.html",
  "policy_title": "Intellisync Corporation: Online Privacy Policy",
  "policy_url": "sync.com/privacy.html",
  "sha1": "265755373ff3c36ccb23ea1907f41ed7f840b6e6",
  "simhash": 14491450361531568340,
  "simhash_updated": false,
  "site_hostname": "sync.com",
  "site_url": "http://sync.com",
  "smog": 15.2,
  "strict_updated": false,
  "timestamp": "20060615014017",
  "word_count": 1626,
  "year": 2006
}

--- a/s/sy/syn/sync.com.html
+++ b/s/sy/syn/sync.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sync.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218225139id_/http%3A//www.sync.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sync.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014017id_/http%3A//www.sync.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/Master.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -8,7 +8,7 @@
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="pumanew.css">
 <script language="JavaScript" src="menu_array.js" type="text/javascript"></script><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><link rel="stylesheet" href="/pumanew.css"><script language="javascript"> menu1=menus[1]; menu2=menus[2]; menu3=menus[3]; menu4=menus[4]; menu5=menus[5]; menu6=menus[6];</script>
-<script language="JavaScript" src="mmenu.js" type="text/javascript"></script></head><body><div id="menu1" style="z-index: 21; visibility: visible; border: 1px solid rgb(255, 255, 255); position: absolute; background: rgb(58, 93, 125); width: 803px; left: 0px; top: 0px; height: 21px;"><div id="hel0" style="width: 133px; position: absolute; top: 0px; left: 0px; height: 20px;"><a href="/index.html" style="text-decoration:none;"><div id="el0" style="text-align:left;position:absolute;width:127px;padding:3px 3px 3px 3px ;font-weight:normal;font-style:normal;font-family:Arial;font-size:12px;color:#FFFFFF;background:#3A5D7D;" onmouseover="this.style.background='#AAC096';style.color='#FFFFFF';this.style.cursor='pointer';ShM=1;; popi('/index.html','menu1',0);;;return stch('Back to the Intellisync.com home page');" onmouseout="rep_img(); popdn(this,0, 'menu1', '/index.html', '#3A5D7D', '#FFFFFF');;; return stch('');"><b>Home</b></div></a><div style=";top:0;position:absolute;"><div onmouseover="clearTimeout(Mtimer)" id="hsep0" style="position: absolute; background: rgb(255, 255, 255); width: 1px; height: 20px; left: 133px;">
+<script language="JavaScript" src="mmenu.js" type="text/javascript"></script></head><body><div id="menu1" style="z-index: 21; visibility: visible; border: 1px solid rgb(255, 255, 255); position: absolute; background: rgb(58, 93, 125); width: 803px; left: 0px; top: 62px; height: 21px;"><div id="hel0" style="width: 133px; position: absolute; top: 0px; left: 0px; height: 20px;"><a href="/index.html" style="text-decoration:none;"><div id="el0" style="text-align:left;position:absolute;width:127px;padding:3px 3px 3px 3px ;font-weight:normal;font-style:normal;font-family:Arial;font-size:12px;color:#FFFFFF;background:#3A5D7D;" onmouseover="this.style.background='#AAC096';style.color='#FFFFFF';this.style.cursor='pointer';ShM=1;; popi('/index.html','menu1',0);;;return stch('Back to the Intellisync.com home page');" onmouseout="rep_img(); popdn(this,0, 'menu1', '/index.html', '#3A5D7D', '#FFFFFF');;; return stch('');"><b>Home</b></div></a><div style=";top:0;position:absolute;"><div onmouseover="clearTimeout(Mtimer)" id="hsep0" style="position: absolute; background: rgb(255, 255, 255); width: 1px; height: 20px; left: 133px;">
 </div>
 </div></div><div id="hel1" style="width: 133px; position: absolute; top: 0px; left: 134px; height: 20px;"> <div id="el1" style="text-align:left;position:absolute;width:127px;padding:3px 3px 3px 3px ;font-weight:normal;font-style:normal;font-family:Arial;font-size:12px;color:#FFFFFF;background:#3A5D7D;" onmouseover="this.style.background='#AAC096';style.color='#FFFFFF';this.style.cursor='default';ShM=1;; popi('show-menu=products','menu1',1);;;return stch('Intellisync Corporation Products');" onmouseout="rep_img(); popdn(this,1, 'menu1', 'show-menu=products', '#3A5D7D', '#FFFFFF');;; return stch('');"><b>Personal Products</b></div><div style=";top:0;position:absolute;"><div onmouseover="clearTimeout(Mtimer)" id="hsep1" style="position: absolute; background: rgb(255, 255, 255); width: 1px; height: 20px; left: 133px;">
 </div>
@@ -31,7 +31,17 @@
 
 
 
-<div class="topimagedata"><img src="secondary_images/titlebar.jpg" width="803" height="50" alt="" border="0"><p align="right"><img src="secondary_images/horizontal_dots.gif" alt="" width="338" height="8" vspace="5" border="0"></p></div><div class="mainbodydata"><table width="802" border="0" cellspacing="0" cellpadding="3"><tbody><tr><td width="69" align="center" valign="top" background="homepage_images/side_bar2.jpg"><img src="/homepage_images/side_bar.jpg" alt="" width="69" height="1" border="0"></td><td valign="top" width="733"><br><br><br>
+<table width="807" border="0" cellspacing="0" cellpadding="0">
+<tbody><tr>
+	
+	<td width="168" align="left"><a href="http://www.sync.com/"><img src="/images/Nokia_logo.gif" alt="Nokia" width="91" height="32" hspace="15" vspace="15" border="0"></a></td>
+	<td width="87" align="left" valign="bottom"><img src="/images/syncDotCom.gif" alt="Intellisync.com" width="87" height="12" vspace="14" border="0"></td>
+	<td width="552" align="right" valign="bottom"><img src="/images/is_logo.gif" alt="" width="64" height="31" hspace="15" vspace="13" border="0"></td>
+							
+	
+</tr>
+</tbody></table>
+<div class="mainbodydata"><table width="802" border="0" cellspacing="0" cellpadding="3"><tbody><tr><td width="69" align="center" valign="top" background="homepage_images/side_bar2.jpg"><img src="/homepage_images/side_bar.jpg" alt="" width="69" height="1" border="0"></td><td valign="top" width="733"><br><br><br>
 
 <!-- InstanceBeginEditable name="EditRegion1" -->
 <h2>Privacy Policy</h2>
