--- a/s/sh/sho/shopica.com.html
+++ b/s/sh/sho/shopica.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shopica.com privacy policy that was archived on 2004-12-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207145606id_/http%3A//www.shopica.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shopica.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014228id_/http%3A//www.shopica.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Thank you for your interest in Shopica</title>
@@ -24,7 +24,7 @@
 		<tbody><tr valign="bottom">
 		<td width="1%"><a href="http://www.shopica.com"><img src="/images/shopica_logo_top.gif" alt="" width="145" height="44" border="0"></a></td>
 		<td><font face="arial" size="-2" color="868585">SEARCH. COMPARE. BUY SHOPICA</font></td>
-		<td align="right"><a href="#" onclick="external.AddFavorite(location.href,document.title);return false;"><img src="/images/txt_bookmark.gif" alt="" width="120" height="13" border="0"></a></td>
+		<td align="right">&nbsp;</td>
 		</tr>
 		<tr>
 		<td colspan="3"><img src="/images/shopica_logo_bott.gif" alt="" width="145" height="9" border="0"></td>
@@ -38,15 +38,10 @@
 	<tbody><tr>
 	<td>
 		<table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="A2B179">
+		<form name="cscsearch" action="/search.php" method="GET"></form>
 		<tbody><tr align="center">
-		<td height="38"><form name="cscsearch" action="/search.php" method="GET"><font face="arial" size="-1" color="white"><b>SEARCH SHOPICA:</b></font>&nbsp;&nbsp;&nbsp;
-        <select name="cate">
-        <option value="">All Products</option>
-        <option value="2">Computers</option>
-        <option value="3">Electronics</option>
-</select>
-&nbsp;<font face="arial" size="-1" color="white"><b>for</b></font>&nbsp;
-        <input type="text" size="40" value="" name="q">&nbsp;&nbsp;&nbsp;<input type="submit" value="Search"></form></td>
+		<td height="38">
+        <input type="text" size="40" value="" name="q">&nbsp;&nbsp;&nbsp;<input type="submit" value="Search"></td>
 		</tr>
 		
 		</tbody></table>
@@ -58,15 +53,10 @@
  	 <tbody><tr>
  	 <td>
  		 <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="A2B179">
+		 <form name="cscsearch" action="/search.php" method="GET"></form>
  		 <tbody><tr align="center">
- 		 <td height="38"><form name="cscsearch" action="/search.php" method="GET"><font face="arial" size="-1" color="white"><b>SEARCH SHOPICA:</b></font>&nbsp;&nbsp;&nbsp;
-         <select name="cate">
-         <option value="">All Products</option>
-         <option value="2">Computers</option>
-         <option value="3">Electronics</option>
-         </select>
-         &nbsp;<font face="arial" size="-1" color="white"><b>for</b></font>&nbsp;
-         <input type="text" size="40" value="" name="q">&nbsp;&nbsp;&nbsp;<input type="submit" value="Search"></form></td>
+ 		 <td height="38">
+         <input type="text" size="40" value="" name="q">&nbsp;&nbsp;&nbsp;<input type="submit" value="Search"></td>
  		 </tr>
  		 
  		 </tbody></table>
@@ -89,11 +79,8 @@
  <td>
  		 <table border="0" cellpadding="1" cellspacing="1" width="100%">
  		 <tbody><tr>
- 		 <td colspan="2"><font face="arial" size="-1" color="black"><b>Get Shopica:</b></font>&nbsp;&nbsp;<font face="arial" size="-1" color="black">Comparison Shop</font>&nbsp;&nbsp;<font face="arial" size="-1" color="black">|</font>&nbsp;&nbsp;<a href="http://coupons.smarter.com/"><font face="arial" size="-1" color="0000cc">Coupons</font></a>&nbsp;&nbsp;<font face="arial" size="-1" color="black">|</font>&nbsp;&nbsp;<a href="http://travel.smarter.com/"><font face="arial" size="-1" color="0000cc">Hotel Discounts</font></a></td>
- 		 </tr>
- 		 <tr>
- 		 <td><font face="arial" size="-1" color="black"><b>Merchants:</b></font>&nbsp;&nbsp;<a href="/listyourproducts/"><font face="arial" size="-1" color="0000cc">List Your Products</font></a>&nbsp;&nbsp;<font face="arial" size="-1" color="black">|</font>&nbsp;&nbsp;<a href="https://sam.smarter.com/"><font face="arial" size="-1" color="0000cc">Merchant Login</font></a></td>
- 		 <td align="right"><a href="http://www.shopica.com/sitemap/sitemap.html"><font face="arial" size="-1" color="0000cc">Sitemap</font></a>&nbsp;&nbsp;<font face="arial" size="-1" color="black">|</font>&nbsp;&nbsp;<a href="http://www.smarter.com/help/"><font face="arial" size="-1" color="0000cc">Help</font></a>&nbsp;&nbsp;<font face="arial" size="-1" color="black">|</font>&nbsp;&nbsp;<a href="http://www.smarter.com/company_info.html"><font face="arial" size="-1" color="0000cc">Company Info</font></a></td>
+ 		 <td colspan="2">&nbsp;</td>
+ 		 <td align="right"><a href="/sitemap/sitemap.html"><font face="arial" size="-1" color="0000cc">Sitemap</font></a></td>
  		 </tr>
  		 </tbody></table>
  </td>
@@ -112,7 +99,7 @@
  </tr>
  
  <tr>
- <td><font face="arial" size="-2" color="7F7F7F">Your use of this Web site constitutes acceptance of the Shopica.com <a href="/privacy_policy.html"><font face="arial" size="-2" color="7f7f7f">Privacy Policy</font></a> and <a href="http://www.shopica.com/terms_conditions.html"><font face="arial" size="-2" color="7f7f7f">Terms &amp; Conditions</font></a><br><br>Copyright © 2002-2004 Shopica.com. All Rights Reserved.</font></td>
+ <td align="center"><font face="arial" size="-2" color="7F7F7F">Your use of this Web site constitutes acceptance of the Shopica.com <a href="/privacy_policy.html" target="_blank"><font face="arial" size="-2" color="7f7f7f">Privacy Policy</font></a> and <a href="/terms_conditions.html" target="_blank"><font face="arial" size="-2" color="7f7f7f">Terms &amp; Conditions</font></a><br><br>Copyright © 2002-2006 Shopica.com. All Rights Reserved.</font></td>
  </tr>
  
  </tbody></table></td></tr></tbody></table><script language="javascript"><!--  top.MyClose=false;--></script></body></html>
