--- a/r/rl/rlr/rlrouse.com.html
+++ b/r/rl/rlr/rlrouse.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rlrouse.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214112513id_/http%3A//www.rlrouse.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rlrouse.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014406id_/http%3A//www.rlrouse.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -294,7 +294,7 @@ google_color_text = "000000";
       document.write ("&amp;referer=" + escape(document.referer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://rlrouse.com/pan/adjs.php?n=020976919&amp;what=zone:1&amp;target=blank&amp;exclude=,"></script><noscript><a href='http://rlrouse.com/pan/adclick.php?n=a1187668' target='blank'><img src='http://rlrouse.com/pan/adview.php?what=zone:1&amp;n=a1187668' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://rlrouse.com/pan/adjs.php?n=462498645&amp;what=zone:1&amp;target=blank&amp;exclude=,"></script><noscript><a href='http://rlrouse.com/pan/adclick.php?n=a1187668' target='blank'><img src='http://rlrouse.com/pan/adview.php?what=zone:1&amp;n=a1187668' border='0' alt=''></a></noscript>
 <br>&nbsp;<br>
       <a href="http://www.elib.org" target="_blank"><font face="Arial Narrow" size="2">Elib Directory</font></a><font face="Arial Narrow" size="2">: devoted to Internet Commerce.</font><i><b><br>
       </b>
@@ -310,7 +310,7 @@ Cheap Textbooks, Cheap Books, Used College Textbooks &amp; Used Books</a> - Comp
 <font face="Arial Narrow" size="2"><br>
 bookstores to get the best deals for discount new &amp; used books &amp; college textbooks.</font>
 <br>
-&nbsp;
+&nbsp;<br>
 </td>
   </tr>
 </tbody></table>
@@ -324,7 +324,7 @@ bookstores to get the best deals for discount new &amp; used books &amp; college
   <table border="0" width="100%" cellspacing="0" bgcolor="#006600" cellpadding="8">
     <tbody><tr>
       <td width="60%" valign="middle"><font face="Verdana" size="1" color="#FFFF00">©
-        2003-2005 RLROUSE.COM, </font><a href="http://www.rlrouse.com/abingdon.html"><font face="Verdana" size="1" color="#FFFF00">Abingdon, Va</font></a></td>
+        2003-2006 RLROUSE.COM, </font><a href="http://www.rlrouse.com/abingdon.html"><font face="Verdana" size="1" color="#FFFF00">Abingdon, Va</font></a></td>
       <td width="40%" align="center"><a href="http://www.rlrouse.com/"><font color="#FFFF00" face="Verdana" size="2">Home</font></a></td>
     </tr>
   </tbody></table>
