--- a/i/is/iso/isoc.org.html
+++ b/i/is/iso/isoc.org.html
@@ -1,212 +1,55 @@
-<!--The following is the downloaded HTML source of the isoc.org privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228171806id_/http%3A//www.isoc.org/help/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the isoc.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014431id_/http%3A//www.isoc.org/help/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html lang="en"><head>
 <title>ISOC Search/Site Map/Help: Privacy Statement</title>
-<meta name="description" content="Internet Society (ISOC) Website Credits" "="">
-<meta name="keywords" content="Internet Society, ISOC, isoc, search, help, site map"><link href="http://www.isoc.org/includes/isoc_styles.css" rel="stylesheet" type="text/css">
+<meta name="description" content="Internet Society (ISOC) Website Credits">
+<meta name="keywords" content="Internet Society, ISOC, isoc, search, help, site map">
+<meta name="author" content="Internet Society (ISOC)">
+<meta name="robots" content="all, index, follow">
+<meta name="Revisit-After" content="1 days">
+<meta name="Identifier-URL" content="http://www.isoc.org">
+<script type="text/javascript" language="javascript" src="http://www.isoc.org/includes/javascript.js"></script>
+<link href="http://www.isoc.org/includes/styles.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<table>
+<tbody><tr><td colspan="2" rowspan="2"><a href="/index.shtml"><img src="/graphics/ilogo.gif" alt="Internet Society Logo"></a></td>
+     <td><a href="/isoc/" onmouseover="return changeImage(document.btisoc,btisocnew,btisoctmp);" onmouseout="return restoreImage(document.btisoc,btisoctmp)"><img src="/graphics/btisoc.gif" alt="All About ISOC" name="btisoc"></a></td>
 
-<!-- Information to be included at the top of each interior page in the ISOC site -->
+    <td><a href="/internet/" onmouseover="return changeImage(document.btnet,btnetnew,btnettmp);" onmouseout="return restoreImage(document.btnet,btnettmp)"><img src="/graphics/btnet.gif" alt="All About the Internet" width="125" height="32" name="btnet"></a></td>
 
-<!-- Javascript for Main Buttons -->
-<script language="javascript" type="text/javascript">
-<!--
-var btisocnew,btisoctmp,btorgnew,btorgtmp,btnetnew,btnettmp,btmemnew,btmemtmp,bthelpnew,bthelptmp,btjoinnew,btjointmp,bthomenew,bthometmp;
-
-function changeImage(oldimg,newimg,temp)
-{
-	return true;
-}
-function restoreImage(oldimg,temp)
-{
-	return true;
-}
-
-btisocnew=new Image(145,32);
-btisocnew.src="/graphics/btisoc2.gif";
-btisoctmp=new Image(145,32);
-
-btorgnew=new Image(145,22);
-btorgnew.src="/graphics/btorg2.gif";
-btorgtmp=new Image(145,22);
-
-bthelpnew=new Image(109,32);
-bthelpnew.src="/graphics/bthelp2.gif";
-bthelptmp=new Image(109,32);
-
-btnetnew=new Image(125,32);
-btnetnew.src="/graphics/btnet2.gif";
-btnettmp=new Image(125,32);
-
-btmemnew=new Image(143,22);
-btmemnew.src="/graphics/btmem2.gif";
-btmemtmp=new Image(143,22);
-
-bthomenew=new Image(109,22);
-bthomenew.src="/graphics/bthome2.gif";
-bthometmp=new Image(109,22);
-
-
-function changeImage(oldimg,newimg,temp)
-
-  {	temp.src=oldimg.src;
-	  	oldimg.src=newimg.src;  }
-
-function restoreImage(oldimg,temp){
-	oldimg.src=temp.src;
-
-}
-
-function MM_swapImgRestore() { //v3.0
-  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
-}
-
-function MM_preloadImages() { //v3.0
-  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
-
-function MM_findObj(n, d) { //v3.0
-  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
-    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
-  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document); return x;
-}
-
-function MM_swapImage() { //v3.0
-  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
-   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
-}
-//-->
-</script>
-
-
-
-</head><body background="/graphics/bk.gif" bgcolor="#FFFFFF" link="#330099" vlink="#555555" alink="#DD7711" onload="MM_preloadImages('graphics/main/navbar02/baron01.gif','graphics/main/navbar02/baron02.gif','graphics/main/navbar02/baron03.gif','graphics/main/navbar02/baron04.gif','graphics/main/navbar02/baron05.gif','graphics/main/navbar02/baron06.gif','graphics/main/navbar02/baron07.gif','graphics/main/navbar02/baron08.gif')">
-<!--   HEAD NAVIGATIONAL TABLE: FIVE COLUMNS WIDE,  THREE ROWS TALL  --> 
-<table cellpadding="0" cellspacing="0" border="0">
-<!--   -= ROW 1 =-  -->
-<tbody><tr><td valign="top" align="left" colspan="2" rowspan="2"><a href="/index.shtml"><img src="/graphics/ilogo.gif" border="0" width="217" height="54" alt="Internet Society Logo"></a></td>
-    <!-- Top Row of Main Buttons -->
-     <td valign="top" align="left"><a href="/isoc/" onmouseover="return changeImage(document.btisoc,btisocnew,btisoctmp);" onmouseout="return restoreImage(document.btisoc,btisoctmp)"><img src="/graphics/btisoc.gif" border="0" width="145" height="32" alt="All About ISOC" name="btisoc"></a></td>
-
-    <td valign="top" align="left" width="125"><a href="/internet/" onmouseover="return changeImage(document.btnet,btnetnew,btnettmp);" onmouseout="return restoreImage(document.btnet,btnettmp)"><img src="/graphics/btnet.gif" border="0" alt="All About the Internet" width="125" height="32" name="btnet"></a></td>
-
-    <td valign="top" align="left"><a href="/help/" onmouseover="return changeImage(document.bthelp,bthelpnew,bthelptmp);" onmouseout="return restoreImage(document.bthelp,bthelptmp)"><img src="/graphics/bthelp.gif" border="0" width="109" height="32" alt="Search/Site Map" name="bthelp"></a></td></tr>
-
-<!--   -= ROW 2 =-   -->
-<!-- Bottom Row of Main Buttons -->
+    <td><a href="/help/" onmouseover="return changeImage(document.bthelp,bthelpnew,bthelptmp);" onmouseout="return restoreImage(document.bthelp,bthelptmp)"><img src="/graphics/bthelp.gif" alt="Search/Site Map" name="bthelp"></a></td>
+</tr>
 <tr>
-    <td valign="top" align="left"><a href="/orgs/" onmouseover="return changeImage(document.btorg,btorgnew,btorgtmp);" onmouseout="return restoreImage(document.btorg,btorgtmp)"><img src="/graphics/btorg.gif" border="0" width="145" height="22" alt="Organization Members" name="btorg"></a></td>
+    <td><a href="/orgs/" onmouseover="return changeImage(document.btorg,btorgnew,btorgtmp);" onmouseout="return restoreImage(document.btorg,btorgtmp)"><img src="/graphics/btorg.gif" alt="Organization Members" name="btorg"></a></td>
 
-    <td valign="top" align="left"><a href="/members/" onmouseover="return changeImage(document.btmem,btmemnew,btmemtmp);" onmouseout="return restoreImage(document.btmem,btmemtmp)"><img src="/graphics/btmem.gif" border="0" width="125" height="22" alt="Members Only" name="btmem"></a></td>
+    <td><a href="/members/" onmouseover="return changeImage(document.btmem,btmemnew,btmemtmp);" onmouseout="return restoreImage(document.btmem,btmemtmp)"><img src="/graphics/btmem.gif" alt="Members Only" name="btmem"></a></td>
 
-    <td valign="top" align="left"><a href="/index.shtml" onmouseover="return changeImage(document.bthome,bthomenew,bthometmp);" onmouseout="return restoreImage(document.bthome,bthometmp)"><img src="/graphics/bthome.gif" border="0" width="109" height="22" alt="Home" name="bthome"></a></td></tr>
+    <td><a href="/index.shtml" onmouseover="return changeImage(document.bthome,bthomenew,bthometmp);" onmouseout="return restoreImage(document.bthome,bthometmp)"><img src="/graphics/bthome.gif" alt="Home" name="bthome"></a></td>
+</tr>
 
-<!--   -= ROW 3 =-   -->
-<!-- Join and Contact Button Row -->
 <tr>
-    <td valign="top" align="left"><a href="http://members.isoc.org/PortalTools/Login.cfm"><img src="/graphics/join.gif" border="0" alt="Join " width="99" height="17"></a></td>
-    <td valign="top" align="left"><a href="/isoc/contact.shtml"><img src="/graphics/contact.gif" border="0" alt="Feedback" width="118" height="17"></a></td>
-    <td colspan="3"></td></tr>
+    <td><a href="http://members.isoc.org/PortalTools/Login.cfm"><img src="/graphics/join.gif" alt="Join"></a></td>
+    <td><a href="/isoc/contact.shtml"><img src="/graphics/contact.gif" alt="Feedback"></a></td>
+    <td colspan="3"></td>
+</tr>
 </tbody></table>
-<table border="0" cellpadding="0" cellspacing="0" width="605">
-  <tbody><tr> 
-    <td width="10" bgcolor="#000099"><img src="/graphics/main/singlepix.gif" width="1" height="1" border="0" alt=""><img height="1" width="1" src="/graphics/main/singlepix.gif" alt=""></td>
-    <td width="80"><a href="/pubs/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button7','','/graphics/main/navbar02/baron01.gif',1)"><img src="/graphics/main/navbar02/baroff01.gif" width="80" height="18" name="button7" border="0" alt="Publications"></a></td>
-    <td width="104"><a href="/educpillar/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button8','','/graphics/main/navbar02/baron02.gif',1)"><img src="/graphics/main/navbar02/baroff02.gif" width="104" height="18" name="button8" border="0" alt="Education and Training"></a></td>
-    <td width="71"><a href="/pubpolpillar/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button9','','/graphics/main/navbar02/baron03.gif',1)"><img src="/graphics/main/navbar02/baroff03.gif" width="71" height="18" name="button9" border="0" alt="Public Policy"></a></td>
-    <td width="110"><a href="/standards/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button10','','/graphics/main/navbar02/baron04.gif',1)"><img src="/graphics/main/navbar02/baroff04.gif" width="110" height="18" name="button10" border="0" alt="Standards and Protocols"></a></td>
-    <td width="50"><a href="/isoc/chapters/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button11','','/graphics/main/navbar02/baron05.gif',1)"><img src="/graphics/main/navbar02/baroff05.gif" width="50" height="18" name="button11" border="0" alt="Chapters"></a></td>
-    <td width="58"><a href="/isoc/media/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button12','','/graphics/main/navbar02/baron06.gif',1)"><img src="/graphics/main/navbar02/baroff06.gif" width="58" height="18" name="button12" border="0" alt="Press Info"></a></td>
-    <td width="68"><a href="/isoc/conferences/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button13','','/graphics/main/navbar02/baron07.gif',1)"><img src="/graphics/main/navbar02/baroff07.gif" width="68" height="18" name="button13" border="0" alt="Conferences"></a></td>
-    <td width="42"><a href="/members/discuss/index.shtml" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button14','','/graphics/main/navbar02/baron08.gif',1)"><img src="/graphics/main/navbar02/baroff08.gif" width="54" height="18" name="button14" border="0" alt="Discussion Groups"></a></td>
-  </tr>
-  <tr> 
-    <td width="10" bgcolor="#000099">&nbsp;</td>
-    <td width="583" colspan="8">&nbsp;</td>
-  </tr>
-</tbody></table>
+<div style="margin-bottom: 12px">
+<a style="padding-left: 10px" href="/pubs/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button7','','/graphics/main/navbar02/baron01.gif',1)"><img src="/graphics/main/navbar02/baroff01.gif" name="button7" alt="Publications"></a><a href="/educpillar/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button8','','/graphics/main/navbar02/baron02.gif',1)"><img src="/graphics/main/navbar02/baroff02.gif" name="button8" alt="Education and Training"></a><a href="/pubpolpillar/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button9','','/graphics/main/navbar02/baron03.gif',1)"><img src="/graphics/main/navbar02/baroff03.gif" name="button9" alt="Public Policy"></a><a href="/standards/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button10','','/graphics/main/navbar02/baron04.gif',1)"><img src="/graphics/main/navbar02/baroff04.gif" name="button10" alt="Standards and Protocols"></a><a href="/isoc/chapters/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button11','','/graphics/main/navbar02/baron05.gif',1)"><img src="/graphics/main/navbar02/baroff05.gif" name="button11" alt="Chapters"></a><a href="/isoc/media/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button12','','/graphics/main/navbar02/baron06.gif',1)"><img src="/graphics/main/navbar02/baroff06.gif" name="button12" alt="Press Info"></a><a href="/isoc/conferences/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button13','','/graphics/main/navbar02/baron07.gif',1)"><img src="/graphics/main/navbar02/baroff07.gif" name="button13" alt="Conferences"></a><a href="/members/discuss/index.shtml" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('button14','','/graphics/main/navbar02/baron08.gif',1)"><img src="/graphics/main/navbar02/baroff08.gif" name="button14" alt="Discussion Groups"></a>
+</div>
 
-
-
-<!--   PAGE BODY TABLE: THREE COLUMNS WIDE,  FOUR ROWS TALL  -->
-
-<table width="600" cellpadding="0" cellspacing="0" border="0">
-
-<!--   -= ROW 1 =-   -->
-
-
-
-<!--   ####  SECTION HEADER  ####   -->
-
+<h3>Privacy Statement</h3>
+<table class="main">
 <tbody><tr>
-
-<td align="RIGHT" colspan="3" width="600"><a href="/help/"><img src="/graphics/headhelp.gif" border="0" alt="Search/Site Map" width="469" height="22"></a></td>
-
-<!--   -= ROW 2 =-   -->
-
-</tr><tr><td width="132" valign="top" align="RIGHT">
-
-<!--   INTERIOR TABLE:  FOUR COLUMNS,  VARIABLE ROWS   -->
-
-<table width="132" cellpadding="0" cellspacing="0" border="0">
-
-        <!--   -= INTERIOR TABLE: ROW 1 =-  -->
-
-        <!--   ####   LINKS COLUMN   ####   -->
-
-<tbody><tr>
-
-          <td align="RIGHT" width="131" valign="TOP"> <table width="131" cellspacing="0" cellpadding="0" border="0">
-              <tbody><tr> 
-                <td width="14"> <img src="/graphics/pixel.gif" height="1" width="14" alt=""> 
-                </td>
-                <td width="112" valign="TOP" align="RIGHT">  <img src="/graphics/pixel.gif" height="1" width="112" alt="">  <p class="sidenav"> 
-				 <a href="/help/map/index.shtml">Site Map/Index</a>
-                  <br><br><a href="/zoomsearch/search.php">Site Search Engine</a><br><br>
-                  <a href="/help/privacy/">Privacy 
-                    Notice</a> </p>
-                </td>
-                <td width="5"> <img src="/graphics/pixel.gif" height="1" width="5" alt=""> 
-                </td>
-              </tr>
-              <!-- END COLUMN HEADING  --> 
-              <tr> 
-                <td colspan="3"><img src="/graphics/pixel.gif" height="10" width="131" alt=""></td>
-              </tr>
-            </tbody></table></td>
-
-<td valign="TOP" align="RIGHT" width="1" rowspan="1">
-
-<img src="/graphics/grey.gif" height="300" width="1" alt=""></td></tr>
-
-
-
-<!--   -= INTERIOR TABLE: LAST ROW =-  -->
-
-<tr>
-          <td width="132" colspan="2" align="right"><img src="/graphics/arrow.gif" width="10" height="17" alt=""></td>
-        </tr></tbody></table>
-
-<!--   -= END OF INTERIOR TABLE =-   -->
-
-<br><img src="/graphics/pixel.gif" width="2" height="1" hspace="64" alt=""></td>
-
-<td width="9"><img src="/graphics/pixel.gif" width="1" height="1" hspace="4" alt=""></td>
-
-
-
-    <!--   -= (Page Body Column) =-   --> 
-
-    <td width="459" valign="top"> <img src="/graphics/dot_clear.gif" width="459" height="1" vspace="7" alt=""> 
+<td class="left"><a href="/help/index.shtml" class="l-menu">WWW Site Search</a>
+<a href="/help/map/index.shtml" class="l-menu">Site Map/Index</a> 
+<a href="/help/privacy/index.shtml" class="l-menu">Privacy Notice</a></td>
+<td class="content" style="width: 435px">
 
       <!--  ####  BODY TEXT ####  --> 
 
-      <h3>Privacy Statement:</h3>
-
-      <p> This is the web site 
+       <p> This is the web site 
 
         of The Internet Society.<br>
 
@@ -266,6 +109,17 @@ function MM_swapImage() { //v3.0
         submitting inquiries and comments, or registering for conferences. This 
         information includes name, postal address, email address, and other pertinent 
         data.<br>
+        <br>
+        By voluntarily providing us with your Personal Data, you are consenting to our 
+        use of it in accordance with this Privacy Statement. Due to the nature of the 
+        Internet if you are visiting this site from a country other than the United 
+        States, your communications will inevitably result in the transfer of 
+        information across international boundaries. By visiting this web site you 
+        consent to these transfers. If you provide personal data to this site, you 
+        acknowledge and agree that such personal data may be transferred from your 
+        current location to the offices and servers of the Internet Society and its 
+        affiliates, agents and service providers located in the United States and in 
+        other countries.<br>
         <br>
         <b>WHAT WE DO WITH THE INFORMATION</b><br>
         <br>
@@ -377,45 +231,24 @@ function MM_swapImage() { //v3.0
         Society home page at http://www.isoc.org/.<br>
         <!--   ####  END OF BODY TEXT ####   --> </p>
       </td>
-
   </tr>
+  </tbody></table>
 
-        
-
-<!-- Information to be included at the bottom of each interior ISOC page -->
-
-<!--   -= ROW 3 =-   -->
-<tr><td colspan="3" align="center" class="sidenav">
-    
-<p class="smaller"><img src="/graphics/dot_grey.gif" width="550" height="1" alt="">
-<br>
+<div class="footer">
     1775 Wiehle Ave., 
     Suite 102, Reston, VA, USA 20190-5108<br>
     Tel: +1 703 326 9880 Fax: +1 703 326 9881 <br>
     <br>
     4, rue des Falaises, CH-1205, Geneva, Switzerland <br>
     Tel: +41 22 807 1444 Fax: +41 22 807 1445 
-    </p><p class="smaller">This document 
+    <p class="smaller">This document 
       &lt;http://www.isoc.org/help/privacy/index.shtml&gt; 
       <br>
-      was last updated Wednesday, 27-Jul-2005 18:06:05 EDT. <br>
-      Copyright © 2005 Internet Society. All Rights Reserved. <br>
+      was last updated Tuesday, 06-Jun-2006 06:27:03 EDT. <br>
+      Copyright © 2006 Internet Society. All Rights Reserved. <br>
       <br>
       Webmaster@ISOC.ORG<br>
       <a href="/help/privacy/">Privacy Statement</a></p>
-     </td>
-</tr>
-
-
-
-<!--   -= ROW 4 =-   -->
-<!-- Spacer Columns to Preserve Formatting -->
-<tr><td width="132"><img src="/graphics/dot_clear.gif" width="132" height="1" alt=""></td>
-    <td width="9"><img src="/graphics/dot_clear.gif" width="9" height="1" alt=""></td>
-    <td width="459"><img src="/graphics/dot_clear.gif" width="459" height="1" alt=""></td>
-</tr>
-</tbody></table>
-
-<!--   -= END OF PAGE BODY TABLE =-   -->
+</div>
 
 </body></html>
