cell.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 10710,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.17,
  "homepage_snapshot_redirected_domain": "cell.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401030245id_/http://www.cell.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401030245id_/http%3A//cell.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "cellpress.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615014504id_/http%3A//www.cellpress.com/misc/page%3Fpage%3Dprivacy_policy",
  "policy_title": "",
  "policy_url": "cellpress.com/misc/page?page=privacy_policy",
  "sha1": "aaf4070085c47de8ce4b8acf64a793c3ee1b0264",
  "simhash": 5680132137663211908,
  "simhash_updated": false,
  "site_hostname": "cell.com",
  "site_url": "http://cell.com",
  "smog": 16.57,
  "strict_updated": false,
  "timestamp": "20060615014504",
  "word_count": 1699,
  "year": 2006
}

--- a/c/ce/cel/cell.com.html
+++ b/c/ce/cel/cell.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cell.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210041543id_/http%3A//www.cellpress.com/misc/page%3Fpage%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cell.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014504id_/http%3A//www.cellpress.com/misc/page%3Fpage%3Dprivacy_policy) for the most accurate reproduction.-->
 
 <html xml:lang="en" lang="en"><head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,20 +8,20 @@
    <title></title><script language="JavaScript" src="/webfiles/javascript/script.js"></script><link rel="stylesheet" type="text/css" href="/webfiles/css/styles.css">
    <link rel="stylesheet" type="text/css" href="/webfiles/css/cellpress.css">
    <link rel="stylesheet" type="text/css" href="/webfiles/css/fla_styles.css">
-</head><body bgcolor="#FFFFFF" alink="#0000FF" link="#0000FF" text="#000000" vlink="#440088"><div xmlns:datetime="http://exslt.org/dates-and-times" id="header">
+</head><body bgcolor="#FFFFFF" alink="#0000FF" link="#0000FF" text="#000000" vlink="#440088"><div id="header">
    <table cellpadding="0" cellspacing="0" border="0" width="740">
       <tbody><tr>
          <td height="100" width="340"><img src="/webfiles/images/cellpress/cellpress_logo5.gif" border="0" hspace="0" vspace="0" height="100" width="340" alt="CellPress"></td>
-         <td align="middle" bgcolor="#ffffff" valign="center" width="400"><a href="#" onclick="window.open('https://ad.uk.doubleclick.net/jump/cellpress.rbi/misc/page;sz=220x40;tile=1;ord=85275?', 'pop', 'width=650,height=500,innerWidth=650,innerHeight=500,top=0,left=0,screenX=0,screenY=0,resizable=yes,scrollbars=yes,dependent=yes'); return false;"><img width="220" height="40" border="0" alt="Click here for more details" lowsrc="/webfiles/images/cellpress/spacer.gif" src="https://ad.uk.doubleclick.net/ad/cellpress.rbi/misc/page;sz=220x40;tile=1;ord=85275?"></a></td>
+         <td align="middle" bgcolor="#ffffff" valign="center" width="400"><a href="#" onclick="window.open('https://ad.uk.doubleclick.net/jump/cellpress.rbi/misc/page;sz=220x40;tile=1;ord=53902?', 'pop', 'width=650,height=500,innerWidth=650,innerHeight=500,top=0,left=0,screenX=0,screenY=0,resizable=yes,scrollbars=yes,dependent=yes'); return false;"><img width="220" height="40" border="0" alt="Click here for more details" lowsrc="/webfiles/images/cellpress/spacer.gif" src="https://ad.uk.doubleclick.net/ad/cellpress.rbi/misc/page;sz=220x40;tile=1;ord=53902?"></a></td>
       </tr>
    </tbody></table>
 </div>
-<div xmlns:datetime="http://exslt.org/dates-and-times" id="navigation">
+<div id="navigation">
    <table border="0" cellpadding="0" cellspacing="0" width="740">
       <tbody><tr>
          <td width="10"></td>
          <td>
-            <currtime>Saturday 10 December 2005</currtime>
+            <currtime>Thursday 15 June 2006</currtime>
          </td>
       </tr>
    </tbody></table>
@@ -117,10 +117,10 @@
    <table cellspacing="0" cellpadding="0" width="730" border="0">
       <tbody><tr>
          <td valign="center" align="left" width="200">
-            <p class="copyright"><a href="http://www.cellpress.com"><img src="/webfiles/images/cellpress_logo_footer.gif" width="150" vspace="4" border="0"></a><br>Copyright 2005 Elsevier Inc.
+            <p class="copyright"><a href="http://www.cellpress.com"><img src="/webfiles/images/cellpress_logo_footer.gif" width="150" vspace="4" border="0"></a><br>Copyright 2006 Elsevier Inc.
                					<br><a href="http://www.cellpress.com/misc/page?page=privacy_policy">Privacy Policy</a> | <a href="http://www.cellpress.com/misc/page?page=Termsandconditions">Terms and Conditions</a></p>
          </td>
-         <td valign="center" align="right" width="530"><a href="#" onclick="window.open('https://ad.uk.doubleclick.net/jump/cellpress.rbi/misc/page;sz=468x60;tile=2;ord=66183?', 'pop', 'width=650,height=500,innerWidth=650,innerHeight=500,top=0,left=0,screenX=0,screenY=0,resizable=yes,scrollbars=yes,dependent=yes'); return false;"><img width="468" height="60" border="0" alt="Click here for more details" lowsrc="/webfiles/images/cellpress/spacer.gif" src="https://ad.uk.doubleclick.net/ad/cellpress.rbi/misc/page;sz=468x60;tile=2;ord=66183?"></a></td>
+         <td valign="center" align="right" width="530"><a href="#" onclick="window.open('https://ad.uk.doubleclick.net/jump/cellpress.rbi/misc/page;sz=468x60;tile=2;ord=13354?', 'pop', 'width=650,height=500,innerWidth=650,innerHeight=500,top=0,left=0,screenX=0,screenY=0,resizable=yes,scrollbars=yes,dependent=yes'); return false;"><img width="468" height="60" border="0" alt="Click here for more details" lowsrc="/webfiles/images/cellpress/spacer.gif" src="https://ad.uk.doubleclick.net/ad/cellpress.rbi/misc/page;sz=468x60;tile=2;ord=13354?"></a></td>
       </tr>
    </tbody></table>
 </div></body></html>
