--- a/s/su/sur/surething.com.html
+++ b/s/su/sur/surething.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the surething.com privacy policy that was archived on 2005-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051226172641id_/http%3A//surething.com/ST/Category.asp%3FCatCode%3DPRIVACY_STATEMENT) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the surething.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014621id_/http%3A//www.surething.com/ST/Category.asp%3FCatCode%3DPRIVACY_STATEMENT) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html">
@@ -52,7 +52,7 @@
 <table width="750" height="1" border="0" cellpadding="0" cellspacing="0" bgcolor="#000000"><tbody><tr><td><img src="images/Spacer.gif" width="1" height="1" border="0"></td></tr></tbody></table>
 <table width="750" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF">
 <tbody><tr valign="top">
-<td width="160" class="fineprint" bgcolor="#F2F2F2" valign="top"><img src="images/NavArt07.jpg" border="0" width="159" height="91" alt=""><br><img src="images/Spacer.gif" border="0" width="1" height="16" alt=""><center><img src="images/NavDottedLines.gif" border="0" width="145" height="1" alt=""></center><img src="images/Spacer.gif" border="0" width="1" height="2" alt=""><br><span class="sidelink">
+<td width="160" class="fineprint" bgcolor="#F2F2F2" valign="top"><img src="images/NavArt05.jpg" border="0" width="159" height="91" alt=""><br><img src="images/Spacer.gif" border="0" width="1" height="16" alt=""><center><img src="images/NavDottedLines.gif" border="0" width="145" height="1" alt=""></center><img src="images/Spacer.gif" border="0" width="1" height="2" alt=""><br><span class="sidelink">
 		&nbsp;&nbsp;<a href="http://www.surething.com/ST/Category.asp?CatCode=DEFAULT" class="NavigationLink1"><nobr>Home</nobr></a></span>
 			&nbsp;<img src="images/NavGreyArrowRight.gif" width="7" height="8" border="0"><br><img src="images/Spacer.gif" border="0" width="1" height="2" alt=""><center><img src="images/NavDottedLines.gif" border="0" width="145" height="1" alt=""></center><img src="images/Spacer.gif" border="0" width="1" height="2" alt=""><br><span class="sidelink">
 		&nbsp;&nbsp;<a href="http://www.surething.com/ST/Category.asp?CatCode=PRODUCTS" class="NavigationLink1"><nobr>Products</nobr></a></span>
