--- a/t/ti/tig/tigertech.net.html
+++ b/t/ti/tig/tigertech.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tigertech.net privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210183032id_/http%3A//tigertech.net/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tigertech.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014725id_/http%3A//www.tigertech.net/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Tiger Technologies Privacy Policy</title>
